# bachelor-arbeit

./: .gitignore  .gitmodules  .latexminted_config  README.md  _2EF71E68B4AD97F630480BCEBC1842FB.data.minted  generate-diff.sh  latexmkrc  plotting.py  pyproject.toml  thesis 2.bcf-SAVE-ERROR  thesis.bbl-SAVE-ERROR  thesis.bcf-SAVE-ERROR  thesis.bib  thesis.run 2.xml  thesis.tex
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: apptainer.xlsx  evaluate_benchmarks.py  system.xlsx  vis_notebook.ipynb
benchmark/apptainer/: all_performance.csv  all_performance.tex  benchmark-1.err  benchmark-1.out  benchmark-10.err  benchmark-10.out  benchmark-11.err  benchmark-11.out  benchmark-12.err  benchmark-12.out  benchmark-13.err  benchmark-13.out  benchmark-14.err  (+29 more)
chapters/: 01_introduction.tex  02_background.tex  03_related-work.tex  04_implementation-design.tex  05_evaluation.tex  06_conclusion.tex  07_appendix.tex  background.tex  related-work.tex
code-examples/: Dockerfile.example  Dockerfile.spack  Dockerfile.system  benchmark-apptainer-slurm.sh  benchmark-apptainer.sh  benchmark-system-slurm.sh  benchmark-system.sh  benchmark.sh  containers-ci.yml  devcontainer.json  docker-bake.example.hcl  docker-bake.hcl  docker-spack-entrypoint.sh  gc-eval-vm.terraform  gha.yml
figures/: .$modell-containerfile.drawio.bkp  .$modell-spack-containerfile.drawio.bkp  .$modell-system-containerfile.drawio.bkp  modell-containerfile.drawio  modell-spack-containerfile.drawio  modell-system-containerfile.drawio
lexers/: docker-bake-lexer.py
tables/: devcontainer-support.csv
(+48 files in other folders)
