[project]
name = "bachelor_arbeit"
version = "0.1.0"
description = ""
authors = [
    {name = "Finn Hering",email = "finn.hering@st.ovgu.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
