[project]
name = "bachelor_arbeit"
version = "0.1.0"
description = ""
authors = [
    {name = "Finn Hering",email = "finn.hering@st.ovgu.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "np (>=1.0.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (==5.24.1)",
    "kaleido (==0.2.1)",
    "psutil (>=6.1.1,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
